[package]
name = "rs8080-disassembler"
version = "0.1.0"
authors = ["Danil <knightpp@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.4"
strum = "0.26"
strum_macros = "0.26"

#[profile.release]
#codegen-units = 1
#lto = true
