[package]
name = "rs8080-emulator"
version = "0.1.0"
authors = ["Danil <knightpp@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs8080-disassembler = { path = "../rs8080-disassembler" }
derive_more = "0.99.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "emulate_next"
harness = false
